Auto Save doesn't save Dyn- topo sculpting #37967

Closed
opened 2013-12-28 02:10:18 +01:00 by Paolo Sourvinos · 7 comments

System Information
Operating system and graphics card
OS X 10.9.1 intel i7, 16 GB RAM, ATI Radeon HD 4850

Blender Version
Broken: Blender 2.69.7 r 6727bf3

Short description of error
The Auto Save files saved during sculpting with Dynamic Topology active actually don't save anything sculpted along that session, nor eventual mask.

Exact steps for others to reproduce the error
You have to sculpt something with Dynamic and see that the temp file doesn't record it.

Thank you

**System Information** Operating system and graphics card OS X 10.9.1 intel i7, 16 GB RAM, ATI Radeon HD 4850 **Blender Version** Broken: Blender 2.69.7 r 6727bf3 **Short description of error** The Auto Save files saved during sculpting with Dynamic Topology active actually don't save anything sculpted along that session, nor eventual mask. **Exact steps for others to reproduce the error** You have to sculpt something with Dynamic and see that the temp file doesn't record it. Thank you

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @sourvinos

Added subscriber: @sourvinos
The issue could be related to [#37796: "Undo after leaving sculpt mode through object mode menu blender loses sculpted mesh" ](https://developer.blender.org/T37796)

This issue was referenced by blender/blender-addons-contrib@fbf821c50b

This issue was referenced by blender/blender-addons-contrib@fbf821c50b25b49620a7d7af35321851a547010a

This issue was referenced by fbf821c50b

This issue was referenced by fbf821c50b25b49620a7d7af35321851a547010a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit fbf821c50b.

Closed by commit fbf821c50b.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37967
No description provided.