Fix T37967: autosave does not save dynamic topology edits while in sculpt mode.